// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render component of a specified size 1`] = `
<div>
  <span
    class="jsx-1192169622 avatar "
  >
    <span
      class="jsx-1192169622 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar should render correctly 1`] = `
<div>
  <span
    class="jsx-134754294 avatar "
  >
    <span
      class="jsx-134754294 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar should render text element 1`] = `
<div>
  <span
    class="jsx-134754294 avatar "
  >
    <span
      class="jsx-134754294 avatar-text"
    >
      text
    </span>
  </span>
</div>
`;

exports[`Avatar should stacked when avatars are in a group 1`] = `
<div>
  <div
    class="jsx-95684080 avatar-group "
  >
    <span
      class="jsx-134754294 avatar "
    >
      <span
        class="jsx-134754294 avatar-text"
      />
    </span>
    <span
      class="jsx-134754294 avatar "
    >
      <span
        class="jsx-134754294 avatar-text"
      />
    </span>
  </div>
</div>
`;

exports[`Avatar should support square 1`] = `
<div>
  <span
    class="jsx-2328138326 avatar "
  >
    <span
      class="jsx-2328138326 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar stacked should be work 1`] = `
<div>
  <span
    class="jsx-3444919438 avatar "
  >
    <img
      class="jsx-3444919438 avatar-img"
      src="https://zeit.co/api/www/avatar/?u=evilrabbit&s=160"
    />
  </span>
</div>
`;
